--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       <div class="container">
         <ul class="what-do-we-do__list">
           <li>
-            <img src="/images/desktop/studio/img1-desktop.jpg" srcset="/images/desktop/studio/img1-desktop.jpg 1x,
+            <img src="./images/desktop/studio/img1-desktop.jpg" srcset="/images/desktop/studio/img1-desktop.jpg 1x,
             /images/desktop/studio/img1-desktop@2x.jpg 2x" alt="програмування на компютері" width="100%"
               height="auto" />
 
@@ -178,13 +178,13 @@
           </li>
           <li>
 
-            <img src="/images/desktop/studio/img2-desktop.jpg" srcset="/images/desktop/studio/img2-desktop.jpg 1x,
+            <img src="./images/desktop/studio/img2-desktop.jpg" srcset="/images/desktop/studio/img2-desktop.jpg 1x,
             /images/desktop/studio/img2-desktop@2x.jpg 2x" alt="розробка додатку для мобільних пристроїв" width="100%"
               height="auto" />
             <h3 class="what-do-we-do__z-overlay">МОБІЛЬНІ ДОДАТКИ</h3>
           </li>
           <li>
-            <img src="/images/desktop/studio/img3-desktop.jpg" srcset="/images/desktop/studio/img3-desktop.jpg 1x,
+            <img src="./images/desktop/studio/img3-desktop.jpg" srcset="/images/desktop/studio/img3-desktop.jpg 1x,
             /images/desktop/studio/img3-desktop@2x.jpg 2x" alt="робота з кольорами на планшеті" width="100%"
               height="auto" />
             <h3 class="what-do-we-do__z-overlay">ДИЗАЙНЕРСЬКІ РІШЕННЯ</h3>
