Шлях до картинок

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
     <div class="header__container container">
       <div class="header__left-part-of-header">
 
-        <a class="header__logo " href="index.html"><span>Web</span>Studio</a>
+        <a class="logo logo--dark " href="index.html"><span>Web</span>Studio</a>
 
         <nav class="navigation">
           <ul class="navigation__links">
@@ -498,7 +498,7 @@
 
       <div class="">
         <div class="footer__logo-margin">
-          <a class="footer__logo" href="index.html">Web<span>Studio</span></a>
+          <a class="logo logo--white " href="index.html">Web<span>Studio</span></a>
         </div>
         <address class="address">
           <ul class="footer__address">
