--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="header__container container">
       <div class="header__left-part-of-header">
 
-        <a class="header__logo " href="index.html"><span>Web</span>Studio</a>
+        <a class="logo logo--dark " href="index.html"><span>Web</span>Studio</a>
 
         <nav class="navigation">
           <ul class="navigation__links">
@@ -170,22 +170,22 @@
       <div class="container">
         <ul class="what-do-we-do__list">
           <li>
-            <img src="./images/desktop/studio/img1-desktop.jpg" srcset="/images/desktop/studio/img1-desktop.jpg 1x,
-            /images/desktop/studio/img1-desktop@2x.jpg 2x" alt="програмування на компютері" width="100%"
+            <img src="./images/desktop/studio/img1-desktop.jpg" srcset="./images/desktop/studio/img1-desktop.jpg 1x,
+            ./images/desktop/studio/img1-desktop@2x.jpg 2x" alt="програмування на компютері" width="100%"
               height="auto" />
 
             <h3 class="what-do-we-do__z-overlay">ДЕСКТОПНІ ДОДАТКИ</h3>
           </li>
           <li>
 
-            <img src="./images/desktop/studio/img2-desktop.jpg" srcset="/images/desktop/studio/img2-desktop.jpg 1x,
-            /images/desktop/studio/img2-desktop@2x.jpg 2x" alt="розробка додатку для мобільних пристроїв" width="100%"
+            <img src="./images/desktop/studio/img2-desktop.jpg" srcset="./images/desktop/studio/img2-desktop.jpg 1x,
+            ./images/desktop/studio/img2-desktop@2x.jpg 2x" alt="розробка додатку для мобільних пристроїв" width="100%"
               height="auto" />
             <h3 class="what-do-we-do__z-overlay">МОБІЛЬНІ ДОДАТКИ</h3>
           </li>
           <li>
-            <img src="./images/desktop/studio/img3-desktop.jpg" srcset="/images/desktop/studio/img3-desktop.jpg 1x,
-            /images/desktop/studio/img3-desktop@2x.jpg 2x" alt="робота з кольорами на планшеті" width="100%"
+            <img src="./images/desktop/studio/img3-desktop.jpg" srcset="./images/desktop/studio/img3-desktop.jpg 1x,
+            ./images/desktop/studio/img3-desktop@2x.jpg 2x" alt="робота з кольорами на планшеті" width="100%"
               height="auto" />
             <h3 class="what-do-we-do__z-overlay">ДИЗАЙНЕРСЬКІ РІШЕННЯ</h3>
           </li>
@@ -401,8 +401,8 @@
     <div class="container footer__container">
 
       <div class="">
-        <div class="footer__logo-margin">
-          <a class="footer__logo" href="index.html">Web<span>Studio</span></a>
+         <div class="footer__logo-margin">
+          <a class="logo logo--white " href="index.html">Web<span>Studio</span></a>
         </div>
         <address class="address">
           <ul class="footer__address">
