--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
     <title>Портфоліо</title>
   </head>
   <body>
-    <header class="header">
+    <header class="header header--underline">
     <div class="header__container container">
       <div class="header__left-part-of-header">
 
