--- a/portfolio.html
+++ b/portfolio.html
@@ -84,7 +84,7 @@
           </ul>
         </nav>
        <div class="mobile-wrap">
-     <ul class="mobile-contacts">
+     <ul class="mobile-contacts list">
 
         <li class="mobile-contacts__item">
 
@@ -97,7 +97,7 @@
         </li>
       </ul>
 
-<ul class="mobile-soc">
+<ul class="mobile-soc list">
 <li class="mobile-soc__item">
   <a href="" class="mobile-soc__link">Instagram</a>
 </li>
